--- a/pages/accueil.html
+++ b/pages/accueil.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/style.css">
+    <link rel="icon" type="image/png" href="../assets/images/presentation-img.png" />
     <script src="https://kit.fontawesome.com/d55e797bfb.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Accueil</title>
 </head>
 
 <body id="home-page">
