--- a/pages/accueil.html
+++ b/pages/accueil.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="#">projets réalisés</a></li>
             <li>océane chevalier</li>
-            <li><a href="#">curriculum vitae</a></li>
+            <li><a href="./cv.html">curriculum vitae</a></li>
             <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
         </ul>
     </nav>
@@ -51,7 +51,26 @@
         </section>
 
         <h3><span></span>support de communication</h3>
+
+        <div id="img-box">
+            <div class="img-box-child">
+                <div id="frame-left"></div>
+                <img src="../assets/images/supImg1.png" alt="illustration d'un projet de oceane chevalier">
+            </div>
+            <div class="img-box-child">
+                <div id="frame-right"></div>
+                <img src="../assets/images/supImg2.png" alt="illustration d'un projet de oceane chevalier">
+            </div>
+        </div>
     </main>
+
+    <footer>
+        <ul>
+            <li><a href="#">projets réalisés</a></li>
+            <li><h3>bachelor chef de projet digital</h3></li>
+            <li><a href="./contacts.html">me contacter</a></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
