--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -15,7 +15,7 @@
     <nav>
         <ul>
             <li><a href="#">projets réalisés</a></li>
-            <li>océane chevalier</li>
+            <li><a href="./accueil.html">océane chevalier</a></li>
             <li><a href="#">curriculum vitae</a></li>
             <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
         </ul>
@@ -81,9 +81,7 @@
     <footer>
         <ul>
             <li><a href="#">projets réalisés</a></li>
-            <li>
-                <h3>bachelor chef de projet digital</h3>
-            </li>
+            <li><h3><a href="./accueil.html">bachelor chef de projet digital</a></h3></li>
             <li><a href="#">me contacter</a></li>
         </ul>
     </footer>
