--- a/pages/cv.html
+++ b/pages/cv.html
@@ -15,8 +15,8 @@
     <nav>
         <ul>
             <li><a href="#">projets réalisés</a></li>
-            <li>océane chevalier</li>
-            <li><a href="./cv.html">curriculum vitae</a></li>
+            <li><a href="./accueil.html">océane chevalier</a></li>
+            <li><a href="#">curriculum vitae</a></li>
             <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
         </ul>
     </nav>
@@ -24,15 +24,19 @@
     <main>
         <h1>bachelor chef de projet digital</h1>
         <section id="cv">
-            <video src=""></video>
+            <video src="../assets/videos/video.mov" controls></video>
+            <div>
+                <h2>mon cv digital</h2>
+                <a href="../assets/documents/CV_Océane_Chevalier.pdf" download>Télécharger mon CV en PDF</a>
+            </div>
         </section>
     </main>
 
     <footer>
         <ul>
             <li><a href="#">projets réalisés</a></li>
-            <li><h3>bachelor chef de projet digital</h3></li>
-            <li><a href="./contacts.html">me contacter</a></li>
+            <li><h3><a href="./accueil.html">bachelor chef de projet digital</a></h3></li>
+            <li><a href="#">me contacter</a></li>
         </ul>
     </footer>
 </body>
