--- a/pages/accueil.html
+++ b/pages/accueil.html
@@ -14,7 +14,7 @@
 <body id="home-page">
     <nav>
         <ul>
-            <li><a href="#">projets réalisés</a></li>
+            <li><a href="./namana.html">projets réalisés</a></li>
             <li>océane chevalier</li>
             <li><a href="./cv.html">curriculum vitae</a></li>
             <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
@@ -66,7 +66,7 @@
 
     <footer>
         <ul>
-            <li><a href="#">projets réalisés</a></li>
+            <li><a href="./namana.html">projets réalisés</a></li>
             <li><h3>bachelor chef de projet digital</h3></li>
             <li><a href="./contacts.html">me contacter</a></li>
         </ul>
