--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -14,9 +14,9 @@
 <body id="contact-page">
     <nav>
         <ul>
-            <li><a href="#">projets réalisés</a></li>
+            <li><a href="./namana.html">projets réalisés</a></li>
             <li><a href="./accueil.html">océane chevalier</a></li>
-            <li><a href="#">curriculum vitae</a></li>
+            <li><a href="./cv.html">curriculum vitae</a></li>
             <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
         </ul>
     </nav>
@@ -80,9 +80,9 @@
 
     <footer>
         <ul>
-            <li><a href="#">projets réalisés</a></li>
+            <li><a href="./namana.html">projets réalisés</a></li>
             <li><h3><a href="./accueil.html">bachelor chef de projet digital</a></h3></li>
-            <li><a href="#">me contacter</a></li>
+            <li><a href="./contacts.html">me contacter</a></li>
         </ul>
     </footer>
 </body>
