--- a/pages/cv.html
+++ b/pages/cv.html
@@ -14,7 +14,7 @@
 <body id="cv-page">
     <nav>
         <ul>
-            <li><a href="#">projets réalisés</a></li>
+            <li><a href="./namana.html">projets réalisés</a></li>
             <li><a href="./accueil.html">océane chevalier</a></li>
             <li><a href="#">curriculum vitae</a></li>
             <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
@@ -34,9 +34,9 @@
 
     <footer>
         <ul>
-            <li><a href="#">projets réalisés</a></li>
+            <li><a href="./namana.html">projets réalisés</a></li>
             <li><h3><a href="./accueil.html">bachelor chef de projet digital</a></h3></li>
-            <li><a href="#">me contacter</a></li>
+            <li><a href="./contacts.html">me contacter</a></li>
         </ul>
     </footer>
 </body>
