--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -17,7 +17,7 @@
             <li><a href="./namana.html">projets réalisés</a></li>
             <li><a href="./accueil.html">océane chevalier</a></li>
             <li><a href="./cv.html">curriculum vitae</a></li>
-            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a target="blank" href="https://www.instagram.com/oceane.digital/"><i class="fa-brands fa-instagram"></i></a></li>
         </ul>
     </nav>
 
