--- a/pages/cv.html
+++ b/pages/cv.html
@@ -24,7 +24,7 @@
     <main>
         <h1>bachelor chef de projet digital</h1>
         <section id="cv">
-            <video src="../assets/videos/video.mov" controls></video>
+            <video src="../assets/videos/video.MOV" controls></video>
             <div>
                 <h2>mon cv digital</h2>
                 <a href="../assets/documents/CV_Océane_Chevalier.pdf" download>Télécharger mon CV en PDF</a>
